# LLM-Sequential-Recommendation

./: .gitattributes  .gitignore  LICENSE  README.md  online_material.md  pyproject.toml  run_experiments.ipynb  setup.cfg
beauty/: README.md  attach_embeddings.ipynb  create_sessions.ipynb  create_sessions_csv.ipynb  format_timestamps.ipynb  item_id_to_int.json  openai_augmented_dataset.pickle  palm_augmented_dataset.pickle  product_embeddings_openai.csv.gzip  products_lookup.csv  session_id_to_int.json  split_sessions.ipynb
beauty/finetuning/: check_fine_tune_results.ipynb  ft-i5m6oTIIEbwlSDB0cEn7Q3UW.csv  ft-kKAdWXe2sKPsa9kqgfZW2P5e.csv  ft-lKhu84vhQp2q97BBcbIobyLI.csv  ft-vQjqVAUgAg5pAHZgxMI79yb2.csv  validation_cases.jsonl
main/: abstract_model.py  exceptions.py  neural_model.py
main/data/: abstract_dataset.py  mece_split.py  random_split.py  session_dataset.py  side_information.py  temporal_split.py
main/dim_reducer/: dim_reducer.py
main/eval/: evaluation.py
main/eval/metrics/: __init__.py  catalog_coverage.py  hitrate.py  metric.py  mrr.py  ndcg.py  novelty.py  serendipity.py
main/grurec/: grurec.py  grurec_model.py  grurec_with_embeddings.py
main/hybrids/: embedding-ensemble.py  popularity-based-hybrid.py  properties.py  property-injected-embedding.py  utils.py
main/llm_based/embedding_utils/: create_embeddings.ipynb  key.txt  openai_utils.py  palm_utils.py
main/llm_based/gpt/: gpt_model.py
main/llm_based/palm/: palm_model.py
main/llm_based/prompt_model/: README.md  create_prompt.py  create_train_jsonl.ipynb  predict_vertexai.py  session_finetuned.ipynb
main/llm_based/similarity_model/: llm_seq_sim.py
main/openai/openai_utils/: create_embeddings.ipynb  openai_utils.py
main/openai/prompt_model/: create_prompt.py  session_finetuned.ipynb
main/popularity/: session_popular.py
main/reranking/: rerank_pairwise_similarity.py  reranker.py  reranker_batch.py
main/sknn/: sknn.py
main/transformer/: transformer.py  transformer_model.py
main/utils/: config_util.py  dim_reducer.py  id_reducer.py  multiprocessing.py  side_encoder.py  similarity.py  split_dict.py  top_k_computer.py  utils.py
notebooks/: exploring_embeddings.ipynb  session_data_description.ipynb  session_length_hitrate_anon.ipynb  session_length_hitrate_beauty.ipynb  session_length_hitrate_dh.ipynb
steam/: .gitattributes  README.md  attach_embeddings.ipynb  create_sessions.ipynb  dataset.pickle  item_metadata.csv  openai_augmented_dataset.pickle  palm_augmented_dataset.pickle  sessions.csv  split_sessions.ipynb
(+59 files in other folders)
